Added introjs as node_module and added rtl support

--- a/client/src/app/core/components/navbar/navbar.component.html
+++ b/client/src/app/core/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-sm navbar-light app-navbar bg-light fixed-top">
-  <div class="container">
+  <div class="container-fluid">
     <a class="navbar-brand" routerLink="/"  (click)='close()'>
       <img src="assets/images/artifish_logo.png" height="35px" alt="Artifish">
     </a>
