1. hover portfolio images and check mark on selected 2. mark the last image in canvas with transformer 3. changed navbar items to pointer cursor 4. changed introjs to focus on tooltip instead of element. changed color of next button

--- a/client/src/app/collection/components/collection-view/collection-view.component.css
+++ b/client/src/app/collection/components/collection-view/collection-view.component.css
@@ -1,5 +1,20 @@
 .selected-image {
+  opacity: 0.5;
+}
+
+.img-check-mark {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%)
+}
+
+.portfolio-item-img:hover:not(.selected-image) {
   border: 3px solid gray;
+}
+
+.img-button.img-check-mark:hover:not(.disabled) {
+  background-color: #efefef;
 }
 
 .sticky-top {
