--- a/client/src/app/core/components/navbar/navbar.component.css
+++ b/client/src/app/core/components/navbar/navbar.component.css
@@ -9,3 +9,12 @@ nav.navbar {
   padding-top: 3px;
   padding-bottom: 3px;
 }
+
+.nav-item.active>a.nav-link {
+  border-bottom: 1px solid #7327e7;
+  padding-bottom: 0.15rem;
+  padding-right: 0.2rem;
+  padding-left: 0.2rem;
+  margin-right: 0.3rem;
+  margin-left: 0.3rem;
+}
